data/derived/comb/progs/unify/prog3340.ml.out
Characters 95-97:
  | Sine     (e1) -> sin(pi *. (eval e1))
                                     ^^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'a
